fix navbar dark mode color

--- a/themes/PaperCSS/static/css/main.css
+++ b/themes/PaperCSS/static/css/main.css
@@ -53,6 +53,10 @@
   html body {
     background-color: var(--main-background);
   }
+
+  .collapsible .collapsible-body{
+    background-color: var(--main-background);
+  }
 }
 
 @media (prefers-color-scheme: light) {
